package Part2_DesignPattern.Behavioral.Observer.CA4;

public interface TopicListener {
    void listen(TinTuc t);
}
